# nebulla

./: Cargo.toml  README.md
plots/: rarest_words.py
src/: benchmark.rs  clustering_quality.rs  document_retrieval.rs  embedding.rs  embedding_stability.rs  facade.rs  lib.rs  main.rs  model.rs  model_config.rs  preprocessing.rs  projection.rs  semantic_coherence.rs  temporal_ordering.rs  vocabulary.rs
tests/: integration_test.rs
